tests/invalid/fp_dup_bug.err_exp2
fp_dup_bug.m:048: Error: [38;5;203mduplicate Java foreign_proc[39;49m for this mode of predicate
fp_dup_bug.m:048:   `foo'/2.
fp_dup_bug.m:042:   The first one was here.
fp_dup_bug.m:054: Error: [38;5;203mduplicate Java foreign_proc[39;49m for this mode of predicate
fp_dup_bug.m:054:   `foo'/2.
fp_dup_bug.m:042:   The first one was here.
